infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1     # No of pods to create
  selector:
    matchLabels:
      app:  posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: sidd6916/microservices-posts
---
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
