infra/k8s/query-depl-serv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1     # No of pods to create
  selector:
    matchLabels:
      app:  query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: sidd6916/microservices-query
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
